--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Grayscale
+title: Pedro Aguilar
 email: aguilapedro@gmail.com
 url: https://pedroaguilar.github.io
 description: "What I do with my free time."
@@ -10,7 +10,7 @@ color:
   links: '#219ab3'
 
 # Footer settings
-footer: Pedro Aguilar's website
+footer: Pedro Aguilar
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
